--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>LENOMERCE VENTURES</title>
-<link rel="icon"href="lenomercemain.jpeg">
+<link rel="icon"href="leno.jpeg">
 
 <style>
 textarea {
@@ -10,7 +10,7 @@ resize:none;
 </style>
 </head>
 <body bgcolor="#0b1116" style="color:black;font-family:verdana">
-<table border="0" width="1300" height="400" align="center" cellspacing="4" cellpadding="7" background="lenomercemain.jpeg" align="center">
+<table border="0" width="1300" height="400" align="center" cellspacing="4" cellpadding="7" background="leno.jpeg" align="center">
 
 <tr height="50">
 <td width="580"><img src="lenomerce1.png" width="50" alt="logo"></td>
