--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ resize:none;
 </style>
 </head>
 <body bgcolor="#0b1116" style="color:black;font-family:verdana">
-<table border="0" width="1300" height="900" align="center" cellspacing="4" cellpadding="7" background="lemon.jpeg" align="center">
+<table border="0" width="1300" height="900" align="center" cellspacing="4" cellpadding="7" background="best.jpeg" align="center">
 
 <tr height="50">
-<td width="580"><img src="lenomerce1.png" width="50" alt="logo"></td>
+<td width="580"><img src="logo1.jpeg" width="50" alt="logo"></td>
 <td align="center" width="150" height="50" ><a href="LENOMERCEVENTURESwebpage.html" title="Go to Home"><button class="button" style="width:100;height:30;background-color:#0b1116;border:0;color:white"><b><big>HOME</b></big></button></a></td>
 
 <td align="center" width="150" height="50" ><a href="#aboutus" title="Go to About"><button class="button" style="width:100;height:30;background-color:#0b1116;border:0;color:white"><b><big>ABOUT</b></big></button></a></td>
